# audit_pyside

./: .agent.md  .coverage  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS copy.md  AGENTS.md  ANALISE_ARQUITETURA.md  Agent.md  Agents.md  CLAUDE.md  CORRECAO_ESTOQUE_INICIAL_FINAL.md  FRONTEND.md  PLANO_OTIMIZACAO.md  PROMPT_INICIAL.md  PR_BODY.md  Plano de Arquitetura Revisado_ Rastreabilidade de Produtos.md  Plano de Refatoracao.md  Plano_de_Acao_Rastreabilidade.md  README.md  agente_notion.md  all_issues.json  analise_estoque_2021.py  app.py  app_react.py  app_safe.py  audit_pyside.spec  audit_pyside_frontend.html  audit_pyside_full_patch.diff  clean_log.txt  cleanup-removed-snapshots-example.json  cols_mov.txt  conftest.py  convert_map.py  diff.patch  duckdb_plano.md  dummy_file.txt  extract_log.txt  extract_log2.txt  fix_test_perf.py  (+56 more)
.Jules/: palette.md  setup.sh
.claude/: agent-index.md  settings.local.json
.copilot-tracking/details/: 20260406-audit-react-otimizacao-details.md
.copilot-tracking/plans/: 20260406-audit-react-otimizacao-plan.instructions.md
.copilot-tracking/prompts/: implement-audit-react-otimizacao.prompt.md
.copilot-tracking/research/: 20260406-audit-react-otimizacao-research.md
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md  technical_task.md
.github/agents/: github-ci-agent.agent.md  (+4 more)
.jules/: bolt.md  palette.md  sentinel.md
.qwen/: settings.json
artifacts/: notion_hub_export.md  notion_hub_export_v2.md
audit_react/: components-base.jsx  data-grid.jsx  data.js  tab-agregacao-unificada.jsx  tab-lote.jsx  tab-similaridade.jsx  table-utils.js  tabs-other.jsx  theme.css
backend/: AGENTS.md  main.py
bench/: README.md  capture_baseline.py  comparar_metodos_similaridade.py  conftest.py  run_kpis.py  test_calculo_saldos.py  test_normalizacao_descricao.py
benchmarks/: basic_perf.py
consultas_fonte/: NFe.sql
docs/: AGENTS.md  AUDIT_PYSIDE_PERF_MCP_ARCHITECTURE.md  CLEANUP_PLAN.md  MCP_INTEGRATION_GUIDE.md  PLAN.md  PLANO_INTERFACE_REACT_TABELAS_FILTROS.md  PLANO_MELHORIAS_AUDIT_REACT.md  PLANO_MELHORIAS_SIMILARIDADE.md  PR_followups.md  README.md  abordagem_qconv_fisica.md  agente_audit_pyside.md  agente_audit_pyside_pyside_only.md  agregacao_produtos.md  agregacao_produtos_canonico.md  analise_audit_pyside.md  analise_metodologia_mds_runtime_2026-04-20.md  auto-update-research.md  baseline_performance.json  baseline_performance.md  baseline_performance_2gb.json  branch_cleanup.md  branch_cleanup_2026-05-01.md  branch_cleanup_2026-05-05.md  branch_consolidation_2026-04-23.md  codex_usage.md  conversao_unidades.md  diff-harness.md  duckdb_plano.md  extracao_atomizada.md  gui_testing.md  merge-summary-2026-04-24.md  metodologia_mds_plan.md  mov_estoque.md  plano_q.md  pr_p1-06_ci.md  processo_calculos_mov_estoque.md  refactor_main_window_inventory.md  roadmap.md  runbook_rollback_duckdb.md  (+6 more)
docs copy/: AGENTS.md
fiscal_app/: config.py
frontend/: package.json  pnpm-lock.yaml  tsconfig.app.json
mcp_server/: README.md  requirements.txt  server.py
metodologia_mds/: 01_abordagem_quantidades.md  02_agregacao_produtos.md  03_conversao_unidades.md  04_movimentacao_estoque.md  05_tabela_periodos.md  06_tabela_mensal.md  07_tabela_anual.md
modelo/: Relatorio_Final_Fisconforme_n_atendido.docx
output/: log_review_report.txt
plan/: feature-auditor-dsf-preview-1.md  feature-fisconforme-nao-atendido-1.md  feature-metodologia-mds-1.md  feature-notificacao-react-1.md
playground/: test_produtos_agrupados_filter.py  traceback.txt
pr100_fixes/: 0001-fix-ambiguous-loop-vars.patch  README.md  scripts_check_parens_fixed.py
pyi_hooks/: rthook_utilitarios.py
ref/: fiscal_codes_2026.json
scratch/: resolve_conflict.py
scripts/: audit_categorical_inventory.py  auto_create_pr.ps1  batch_rewrite_parquets_v2.py  benchmark_gui.py  check_docstrings.py  check_forbidden_files.py  check_import.py  check_parens.py  check_polars.py  cleanup-merged-branches.ps1  cleanup_snapshots.py  cleanup_stale_branches.py  convert_co_sefin_to_csv.py  create_example_snapshots.py  debug_mov_rep.py  debug_vinculo.py  gen_fatores_84654326000394.py  generate_methodology_and_consultas_pdf.py  generate_output_samples.py  generate_parquet_references.py  mapeamento_sql_pdf.py  migrate_app_state_active_load_workers.py  notion_export.py  p3_structural_check.py  pipeline_pos_fontes.py  print_lines.py  resumir_performance.py  review_logs.py  smoke_gui_test.py  start-stitch-mcp.ps1  update_pr_body.py
sql/: Fisconforme_malha_cnpj.sql  NFCe.sql  NFe.sql  bloco_h.sql  c100.sql  c170.sql  fronteira.sql
sql copy/: AGENTS.md
src/: orquestrador_pipeline.py
tests/: AGENTS.md  golden_hashes.json  test_aggregation_service.py  test_aggregation_service_contract.py  test_aggregation_service_periodos.py  test_agregacao_produtos.py  test_agregacao_rastreabilidade.py  test_agrupamento_manual.py  test_app.py  test_app_react.py  test_aux_classif_merc.py  test_calculos_anuais.py  test_calculos_mensais.py  test_calculos_periodos.py  test_cleanup_snapshots_script.py  test_co_sefin_class.py  test_codigo_fonte.py  test_codigo_fonte_expr.py  test_compat_ensure_id_aliases.py  test_descricao_similarity_service.py  test_encontrar_arquivo_cnpj.py  test_estoque_codigo_produto.py  test_estoque_inicial_final_anual.py  test_exportar_excel.py  test_extracao_oracle_eficiente.py  test_extrair_dados_cnpj.py  test_extrair_parametros.py  test_extrator_oracle.py  test_fator_origem.py  test_fatores_conversao.py  test_fatores_reconciliacao.py  test_fontes_produtos.py  test_golden_descricao_produtos.py  test_golden_id_agrupados.py  test_golden_item_unidades.py  test_golden_itens.py  test_golden_produtos_itens.py  test_id_agrupados.py  test_inverted_index_descricao.py  test_ler_sql.py  (+46 more)
tests copy/: AGENTS.md
tmp/: check_import.py  git_commit.py  run_pytest.py
(+495 files in other folders)
