[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "app.py", "app_safe.py", "conftest.py"]

[project]
name = "audit-pyside"
version = "0.1.0"
description = "Aplicação desktop Python/PySide6 com pipeline analítico-fiscal"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "PySide6>=6.5",
    "oracledb>=1.0",
    "pyarrow>=14.0",
    "rich>=13.0",
    "numpy>=1.24",
    "xlsxwriter>=3.1",
    "python-dotenv>=1.0",
    "python-docx>=1.0",
    "pymupdf>=1.22.0",
    "filelock>=3.12",
    "numba>=0.58.0",
    "pandas>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.5",
]

[project.scripts]
audit-pyside = "app:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "oracle: tests that require Oracle database connection",
    "gui: tests that require PySide6 GUI (display server)",
    "slow: tests that are slow to run",
]
addopts = ["-m", "not oracle and not gui", "--ignore=tests/test_app.py", "--ignore=tests/test_ui_reverter_mapa_manual.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "E402", "RUF012", "RUF001", "RUF002", "RUF003", "RUF005", "RUF013", "F401", "F403", "F841", "SIM105", "SIM108", "SIM117", "SIM118", "UP038", "B007", "SIM102", "E741", "B008", "B904", "UP035"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"conftest.py" = ["E402"]
"app.py" = ["E402"]
"app_safe.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true
disable_error_code = ["var-annotated"]

[[tool.mypy.overrides]]
module = "src.interface_grafica.ui.main_window"
ignore_errors = true
