[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
include = ["app.py", "app_safe.py"]

[project]
name = "audit-pyside"
version = "0.1.0"
description = "Aplicação desktop Python/PySide6 com pipeline analítico-fiscal"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "PySide6>=6.5",
    "oracledb>=1.0",
    "pyarrow>=14.0",
    "rich>=13.0",
    "numpy>=1.24",
    "xlsxwriter>=3.1",
    "python-dotenv>=1.0",
    "python-docx>=1.0",
    "pymupdf>=1.22.0",
    "filelock>=3.12",
    "numba>=0.58.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1",
    "structlog>=24.1",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    # pytest-benchmark: aprovado em P8-01 no Notion e pedido do owner em 2026-05-02.
    "pytest-benchmark>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.5",
    "pyinstaller>=6.0",
]

[project.scripts]
audit-pyside = "app:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "oracle: tests that require Oracle database connection",
    "gui: tests that require PySide6 GUI (display server)",
    "gui_smoke: headless GUI smoke tests",
    "slow: tests that are slow to run",
    "bench: benchmark tests (run via pytest bench/ --benchmark-only)",
    "diff_harness: testes diferenciais byte-a-byte para invariantes de src/transformacao/",
]
addopts = ["-m", "not oracle and not gui"]

[tool.coverage.run]
# main_window_impl.py is generated Qt designer output (~4500 stmts); it has 0%
# coverage and is exercised only in the gui_smoke job. Omitting it keeps the
# coverage gate meaningful for the rest of the codebase.
omit = [
    "bench/*",
    "src/interface_grafica/ui/main_window_impl.py",
]

[tool.ruff]
line-length = 100
target-version = "py311"
# P1-05 starts the lint/format gate on the fiscal pipeline first. Expanding this
# include list to GUI/scripts/tests belongs in focused cleanup PRs to avoid
# mixing repository-wide formatting with the CI/pre-commit bootstrap.
include = ["src/transformacao/**/*.py"]
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# Transitional debt from legacy pipeline/GUI modules. Keep these ignores explicit while P1
# only establishes the lint gate; shrink them in focused cleanup PRs.
ignore = ["E501", "E402", "RUF012", "RUF001", "RUF002", "RUF003", "RUF005", "RUF013", "RUF022", "RUF059", "F401", "F403", "F841", "SIM105", "SIM108", "SIM117", "SIM118", "B007", "SIM102", "E741", "B008", "B904", "UP035", "UP037", "I001", "UP006", "UP007", "UP015", "UP045", "RUF100"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"conftest.py" = ["E402"]
"app.py" = ["E402"]
"app_safe.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true
disable_error_code = ["var-annotated"]
exclude = [
    "src/transformacao/01_item_unidades.py",
    "src/transformacao/tabelas_base/enriquecimento_fontes.py",
    "src/transformacao/ressarcimento_st_pkg/ressarcimento_st_mensal/gerador.py",
    "src/transformacao/ressarcimento_st_pkg/ressarcimento_st_conciliacao/gerador.py",
    "src/transformacao/rastreabilidade_produtos/fatores_conversao.py",
    "src/transformacao/movimentacao_estoque_pkg/movimentacao_estoque.py",
    "src/transformacao/movimentacao_estoque_pkg/co_sefin_class.py",
    "src/transformacao/movimentacao_estoque_pkg/c170_xml.py",
]

[[tool.mypy.overrides]]
module = "interface_grafica.ui.main_window"
ignore_errors = true
